# NSF-1713973

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  Untitled Diagram.xml  dyn.hpp  int.hpp  main.cpp  ml.hpp  mlp.cpp  notes.md  test.cpp
src/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  fika
src/cor/: activation.hpp  body.hpp  constants.hpp  controller.hpp  dynamics.hpp  epo.hpp  fika.hpp  integrator.hpp  linalg.hpp  mission.hpp  ml.hpp  mlp.hpp  msn.hpp  orbits.hpp  phase.hpp  phs.hpp  plnt.hpp  plotting.hpp  pnt.hpp  propagator.hpp  ptp.hpp  record.hpp  sc.hpp  spacecraft.hpp  spc.hpp  spice.hpp  utl.hpp  vectools.hpp
src/corbeta/: dyn.hpp  fika.hpp  msn.hpp  phs.hpp  pnt.hpp
src/core/: CMakeLists.txt  body.hpp  constants.hpp  controller.hpp  dynamics.hpp  phase.hpp  propagator.hpp  spacecraft.hpp  spice.hpp
src/dta/: PCK00008.tpc
src/dta/ptp/: config.yaml  dec.yaml
src/imp/: ptp.cpp
src/ins/: CMakeLists.txt  build_problems.sh  build_tests.sh  check_bin.sh  check_build.sh  check_cmake.sh  check_problems.sh  check_tests.sh  clean.sh  clear_binary.sh  clear_build.sh  fika.sh  run_ptp.sh  run_ptp_grad.sh  run_tests.sh  spice.sh
src/prb/: CMakeLists.txt  main.cpp  problem.hpp  ptp.cpp  ptp.hpp  ptp.yaml  ptp_grad.cpp
src/prb/ptp/: config.yaml  ptp.cpp  ptp.hpp
src/python/: Math.ipynb
src/python/.ipynb_checkpoints/: Math-checkpoint.ipynb
src/req/: adler.c
src/tst/: CMakeLists.txt  body.cpp  constants.cpp  controller.cpp  dynamics.cpp  msn_tst.cpp  phase.cpp  prb_tst.cpp  propagator.cpp  spacecraft.cpp  spc_tst.cpp  spice.cpp
usr/: ptp  ptp.yaml  ptp_dec.yaml  ptp_grad_dec.yaml
